--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "aos": "^2.3.4",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.25.1"
+    "react-tooltip": "^5.25.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
